--- a/python-consumer/newrelic.ini
+++ b/python-consumer/newrelic.ini
@@ -33,7 +33,7 @@
 # application as you would like it to show up in New Relic UI.
 # The UI will then auto-map instances of your application into a
 # entry on your home dashboard page.
-app_name = ai-bot
+app_name = dspy-evaluator
 
 # New Relic offers distributed tracing for monitoring and analyzing modern
 # distributed systems.Enable distributed tracing.
@@ -56,7 +56,7 @@ monitor_mode = true
 # write out a log file, it is also possible to say "stderr" and
 # output to standard error output. This would normally result in
 # output appearing in your web server log.
-#log_file = /tmp/newrelic-python-agent.log
+#log_file = newrelic-python-agent.log
 
 # Sets the level of detail of messages sent to the log file, if
 # a log file location has been provided. Possible values, in
